2003-09-17  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCopt.c (cnvFromFloatCast, cnvToFloatCast): fixed
	bug #613775

2003-09-16  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genFunction, genEndFunction),
	* src/ds390/gen.c (genFunction, genEndFunction): Moved save
	and restore of EA so that stack offsets to parameters are
	correct when using both critical and reentrant/stack-auto.
	* src/z80/gen.c (aopOp): removed erroneous assertion about sloc
	size (can be triggered in error if sloc is shared between
	different sized objects)
	* device/include/float.h: fixed macros to explicitly use
	unsigned long where needed

2003-09-15  Bernhard Held <bernhard@bernhardheld.de>

	Feature req. 799831: added code to allow nesting of critical functions
	* src/mcs51/gen.c (genFunction, genEndFunction)
	* src/ds390/gen.c (genFunction, genEndFunction)

2003-09-14  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCsymt.c (sclsFromPtr),
	* src/SDCCsymt.h,
	* src/SDCCast.c (decorateType): fixed bug #462971. Also, better
	support for standard C idiom of memory mapped variables; for
	example, *((xdata int*)0x1234) = 1 is now internally equivalent
	to xdata int at 0x1234 tempvar = 1.
	* sim/ucsim/z80.src/inst_xd.cc: fixed bug #805483 with patch
	provided by Akiya ISHIDA

2003-09-13  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (cheapestVal): reenabled to reduce int to char
	* src/SDCCval.c (constVal): added reduction from int to char
	* src/SDCCval.c (valMult, valDiv): fixed sign handling
	* src/SDCCval.c (valShift): fixed after change of cheapestVal()
	* src/SDCCval.c (valCompare): fixed EQ_OP and NE_OP; they have
	to ignore the sign
	* support/regression/tests/shifts.c: fixed

2003-09-13  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.c (genXor): Fixed bug #805445

2003-09-12  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Fixed bug #621531 (const & volatile confusion in the type chain).